opened access to WebDriverSupplier in Browsers.java; removed support for DriverHandler(Browsers.java) - enforcing DriverHandler to consume a WebDriver; created DriverProvider.java - to register @UseDriver input; renamed UseCase.java - LoadPage_DemoSuite.java; trim dependencies - pom.xml; stub @ScreenShotOnFail; create meta-annotation UseDriver.java;

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.vertexinc.returns.test.cloudui</groupId>
     <artifactId>feat-abstraction</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1x</version>
     <build>
         <plugins>
             <plugin>
@@ -22,22 +22,22 @@
     <dependencies>
 
         <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>selenium-jupiter</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.1.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>5.0.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>ru.yandex.qatools.ashot</groupId>
-            <artifactId>ashot</artifactId>
-            <version>1.5.4</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>ru.yandex.qatools.ashot</groupId>-->
+<!--            <artifactId>ashot</artifactId>-->
+<!--            <version>1.5.4</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
