remove consuming constructor - DriverHandler.java; remove @AfterEach call in Main_Application; remove consuming constructor - Page.java; update @ScreenShotOnFail.java to conform to windows; implement screenshot MVP - ScreenShotRuleProperties.java; temporarily deprecate WebBrowser.INTERNET_EXPLORER.java "

--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,14 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.1.1</version>
+<!--            4.1.2 not supported-->
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>ru.yandex.qatools.ashot</groupId>-->
-<!--            <artifactId>ashot</artifactId>-->
-<!--            <version>1.5.4</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
