--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,36 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!--Contributor Info-->
+    <developers>
+        <developer>
+            <name>Montaniz Stills</name>
+            <url>https://github.com/montanizstills/</url>
+        </developer>
+    </developers>
+
+    <!--Project Info-->
+    <name>Nezonium - A Selenium Wrapper Framework</name>
+    <description>
+        A Scalable, Gherkin-like, Selenium-Wrapper framework. Designed to alleviate common web testing nuances, such
+        as: WebDriver Management - downloading drivers, etc.
+        And, leverage Page-Object Modelling design patterns.
+    </description>
+    <url>https://github.com/montanizstills/Nezonium</url>
+    <licenses>
+        <license>
+            <name>GPL-3.0</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
+        </license>
+    </licenses>
+    <scm>
+        <url>https://github.com/montanizstills/Nezonium</url>
+    </scm>
     <groupId>io.github.montanizstills</groupId>
     <artifactId>Nezonium</artifactId>
     <version>0.0.5x</version>
 
+    <!--Deployment Info-->
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -19,9 +45,25 @@
         </repository>
     </distributionManagement>
 
+    <!--Build-->
     <build>
-
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -72,36 +114,11 @@
                 </configuration>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-shade-plugin</artifactId>-->
-<!--                <version>3.2.4</version>-->
-<!--                <configuration>-->
-<!--                    <filters>-->
-<!--                        <filter>-->
-<!--                            <artifact>*:*</artifact>-->
-<!--                            <excludes>-->
-<!--                                <exclude>META-INF/*.SF</exclude>-->
-<!--                                <exclude>META-INF/*.DSA</exclude>-->
-<!--                                <exclude>META-INF/*.RSA</exclude>-->
-<!--                            </excludes>-->
-<!--                        </filter>-->
-<!--                    </filters>-->
-<!--                    &lt;!&ndash; Additional configuration. &ndash;&gt;-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>shade</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-
         </plugins>
     </build>
 
+
+    <!--Dependency-->
     <dependencies>
 
         <dependency>
@@ -127,13 +144,6 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.8.2</version>
         </dependency>
-
-<!--            &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.maven.plugins</groupId>-->
-<!--            <artifactId>maven-gpg-plugin</artifactId>-->
-<!--            <version>3.0.1</version>-->
-<!--        </dependency>-->
 
     </dependencies>
 
