--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.montanizstills</groupId>
     <artifactId>Nezonium</artifactId>
-    <version>${nezonium.version</version>
+    <version>${nezonium.version}</version>
 
     <properties>
         <nezonium.version>0.0.15x</nezonium.version>
@@ -142,6 +142,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <defaultGoal>clean install</defaultGoal>
     </build>
 
     <dependencies>
